--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/projects/" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","headline":"Projects","@type":"WebPage","url":"https://kushajveersingh.github.io/blog/projects/","@context":"https://schema.org"}</script>
+{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebPage","url":"https://kushajveersingh.github.io/blog/projects/","headline":"Projects","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kushajveersingh.github.io/blog/feed.xml" title="Kushajveer Singh" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/projects/" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","headline":"Projects","@type":"WebPage","url":"https://kushajveersingh.github.io/blog/projects/","@context":"https://schema.org"}</script>
+{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebPage","url":"https://kushajveersingh.github.io/blog/projects/","headline":"Projects","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
