deploy: c5044f4a75d567ca93d9cffa509d461699a2710d

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/404.html" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebPage","url":"https://kushajveersingh.github.io/blog/404.html","headline":"Kushajveer Singh","@context":"https://schema.org"}</script>
+{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebPage","headline":"Kushajveer Singh","url":"https://kushajveersingh.github.io/blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kushajveersingh.github.io/blog/feed.xml" title="Kushajveer Singh" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/404.html" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebPage","url":"https://kushajveersingh.github.io/blog/404.html","headline":"Kushajveer Singh","@context":"https://schema.org"}</script>
+{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebPage","headline":"Kushajveer Singh","url":"https://kushajveersingh.github.io/blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
