--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/about/" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebSite","url":"https://kushajveersingh.github.io/blog/about/","name":"Kushajveer Singh","headline":"About","@context":"https://schema.org"}</script>
+{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebSite","headline":"About","url":"https://kushajveersingh.github.io/blog/about/","name":"Kushajveer Singh","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kushajveersingh.github.io/blog/feed.xml" title="Kushajveer Singh" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/about/" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebSite","url":"https://kushajveersingh.github.io/blog/about/","name":"Kushajveer Singh","headline":"About","@context":"https://schema.org"}</script>
+{"description":"Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning","@type":"WebSite","headline":"About","url":"https://kushajveersingh.github.io/blog/about/","name":"Kushajveer Singh","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
