deploy: d4e0a9607600bac5aab9b84343553e5f8669c5b5

--- a/notebooks/index.html
+++ b/notebooks/index.html
@@ -101,17 +101,17 @@ window.onload = wrap_img;
 
 <ul>
   <li>
-    <p><strong>Mish activation function</strong> is tested for transfer learning. Here mish is used only in the last fully-connected layers of a pretrainened Resnet50 model. I test the activation function of CIFAR10, CIFAR100 using three different learning rate values. I found that Mish gave better results than ReLU. <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/deep_learning/paper_implementations/Study%20of%20Mish%20activation%20function%20in%20transfer%20learning%20with%20code%20and%20discussion">notebook</a>, <a href="https://arxiv.org/abs/1908.08681">paper</a></p>
+    <p><strong>Mish activation function</strong> is tested for transfer learning. Here mish is used only in the last fully-connected layers of a pretrainened Resnet50 model. I test the activation function of CIFAR10, CIFAR100 using three different learning rate values. I found that Mish gave better results than ReLU. <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/Study%20of%20Mish%20activation%20function%20in%20transfer%20learning%20with%20code%20and%20discussion">notebook</a>, <a href="https://arxiv.org/abs/1908.08681">paper</a></p>
   </li>
   <li>
-    <p><strong>Multi Sample Dropout</strong> is implemented and tested on CIFAR-100 using cyclic learning. My losses converged 4x faster when using num_samples=8 than using simple dropout. <a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Multi%20Sample%20Dropout/multi_sample_dropout.ipynb">notebook</a>, <a href="https://arxiv.org/abs/1908.08681">paper</a></p>
+    <p><strong>Multi Sample Dropout</strong> is implemented and tested on CIFAR-100 using cyclic learning. My losses converged 4x faster when using num_samples=8 than using simple dropout. <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/Multi%20Sample%20Dropout">notebook</a>, <a href="https://arxiv.org/abs/1908.08681">paper</a></p>
   </li>
   <li><strong>Data Augmentation in Computer Vision</strong>
     <ul>
-      <li>Notebook implementing single image data augmentation techniques using just Python <a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Data%20Augmentation%20in%20Computer%20Vision/single_example_data_augmentations.ipynb">notebook</a></li>
+      <li>Notebook implementing single image data augmentation techniques using just Python <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/Data%20Augmentation%20in%20Computer%20Vision">notebook</a></li>
     </ul>
   </li>
-  <li><strong>Summarizing Leslie N. Smith’s research</strong> in cyclic learning and hyper-parameter setting techniques. <a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb">notebook</a>
+  <li><strong>Summarizing Leslie N. Smith’s research</strong> in cyclic learning and hyper-parameter setting techniques. <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook">notebook</a>
     <ul>
       <li>A disciplined approach to neural network hyper-parameters: Part 1 – learning rate, batch size, momentum, and weight decay <a href="https://arxiv.org/abs/1803.09820">paper</a></li>
       <li>Super-Convergence: Very Fast Training of Neural Networks Using Learning Rates <a href="https://arxiv.org/abs/1708.07120">paper</a></li>
@@ -120,15 +120,15 @@ window.onload = wrap_img;
     </ul>
   </li>
   <li>
-    <p><strong>Photorealisitc Style Transfer</strong>. Implementation of the <em>High-Resolution Network for Photorealistic Style Transfer paper</em>. <a href="https://github.com/KushajveerSingh/Photorealistic-Style-Transfer/tree/master">notebook</a>, <a href="https://arxiv.org/abs/1904.11617">paper</a></p>
+    <p><strong>Photorealisitc Style Transfer</strong>. Implementation of the <em>High-Resolution Network for Photorealistic Style Transfer paper</em>. <a href="https://github.com/KushajveerSingh/Photorealistic-Style-Transfer">notebook</a>, <a href="https://arxiv.org/abs/1904.11617">paper</a></p>
   </li>
   <li>
-    <p><strong>Weight Standardization</strong> is implemented and tested using cyclic learning. I find that it does not work well with cyclic learning when using CIFAR-10. <a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Weight%20Standardization:%20A%20New%20Normalization%20in%20town/Weight%20Standardization%20on%20CIFAR-10.ipynb">notebook</a>, <a href="https://arxiv.org/abs/1903.10520">paper</a></p>
+    <p><strong>Weight Standardization</strong> is implemented and tested using cyclic learning. I find that it does not work well with cyclic learning when using CIFAR-10. <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/weight_standardization">notebook</a>, <a href="https://arxiv.org/abs/1903.10520">paper</a></p>
   </li>
   <li>
     <p><strong>Learning Rate Finder</strong>. Implementation of learning rate finder as introduced in the paper <a href="https://arxiv.org/abs/1903.10520">Cyclical Learning Rates for Training Neural Networks</a>. A general template for custom models is provided. <a href="https://github.com/KushajveerSingh/fastai_without_fastai/blob/master/notebooks/lr_find.ipynb">notebook</a></p>
   </li>
-  <li><strong>PyTorch computer vision tutorial</strong>. AlexNet with tips and checks on how to train CNNs. The following things are included: <a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Training%20AlexNet%20with%20tips%20and%20checks%20on%20how%20to%20train%20CNNs/training_alexnet.ipynb">notebook</a>
+  <li><strong>PyTorch computer vision tutorial</strong>. AlexNet with tips and checks on how to train CNNs. The following things are included: <a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/Training%20AlexNet%20with%20tips%20and%20checks%20on%20how%20to%20train%20CNNs">notebook</a>
     <ul>
       <li>Dataloader creation</li>
       <li>Plotting dataloader results</li>
@@ -138,9 +138,9 @@ window.onload = wrap_img;
     </ul>
   </li>
   <li>
-    <p><a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/How%20to%20deal%20with%20outliers/How%20to%20deal%20with%20outliers.ipynb">How to deal with outliers</a></p>
+    <p><a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/How%20to%20deal%20with%20outliers">How to deal with outliers</a></p>
   </li>
-  <li><a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Number%20of%20bins%20of%20a%20Histogram/How%20to%20choose%20bins%20for%20Histograms.ipynb">How to choose number of bins in a histogram</a></li>
+  <li><a href="https://github.com/KushajveerSingh/deep_learning/tree/master/paper_implementations/Number%20of%20bins%20of%20a%20Histogram">How to choose number of bins in a histogram</a></li>
 </ul>
 
   </div>
