--- a/projects/index.html
+++ b/projects/index.html
@@ -99,7 +99,7 @@ window.onload = wrap_img;
 
 <ul>
   <li>
-    <p><strong><a href="https://github.com/KushajveerSingh/Unsupervised-Parking-Lot-Detection">Unsupervised Parking Lot Detection</a></strong></p>
+    <p><a href="https://github.com/KushajveerSingh/Unsupervised-Parking-Lot-Detection">Unsupervised Parking Lot Detection</a></p>
 
     <p>A complete approach to detect parking lot spaces from images and then tell which spaces are occupied or not. Here I do not use any dataset for training my model to detect parking spaces. My implementation can be divided into these three modules:</p>
     <ul>
@@ -109,22 +109,22 @@ window.onload = wrap_img;
     </ul>
   </li>
   <li>
-    <p><strong><a href="https://github.com/KushajveerSingh/SPADE-PyTorch">SPADE by Nvidia</a></strong></p>
+    <p><a href="https://github.com/KushajveerSingh/SPADE-PyTorch">SPADE by Nvidia</a></p>
 
     <p>Unofficial implementation of SPDAE for image-to-translation from segmentation maps to the colored pictures. Due to compute limit I test it out for a simplified model on Cityscapes dataset and get descent results after 80 epochs with batch_size=2.</p>
   </li>
   <li>
-    <p><strong><a href="https://github.com/KushajveerSingh/deep_learning/tree/master/deep_learning/projects/Waste%20Seggregation%20using%20trashnet">Waste Seggregation using trashnet</a></strong></p>
+    <p><a href="https://github.com/KushajveerSingh/deep_learning/tree/master/projects/Waste_Seggregation_using_trashnet">Waste Seggregation using trashnet</a></p>
 
     <p>Contains the code to train models for trashnet and then export them using ONNX. It was part of a bigger project where we ran these models on Rasberry Pi, which controlled wooden planks to classify the waste into different categories (code for rasberry pi not included here).</p>
   </li>
   <li>
-    <p><strong><a href="https://github.com/KushajveerSingh/deep_learning/tree/master/deep_learning/random/unscramble_android_game">Unscramble game</a></strong></p>
+    <p><a href="https://github.com/KushajveerSingh/deep_learning/tree/master/random/unscramble_android_game">Unscramble game</a></p>
 
     <p>Python script to solve the unscramble android game. You are given 5 random letters and you have to find 3-letter, 4-letter, 5-letter english words from these 5 random letters. It is a simple brute force method with a english dictionary lookup.</p>
   </li>
   <li>
-    <p><strong><a href="https://github.com/KushajveerSingh/Random-Duty-List">Random Duty List</a></strong></p>
+    <p><a href="https://github.com/KushajveerSingh/Random-Duty-List">Random Duty List</a></p>
 
     <p>A PHP and MySQL based work where the aim is to assign duties from a list to various stations and make sure the duties are not repeated and the repetition occurs only after the list is exhasuted.</p>
   </li>
