--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/search/" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"description":"Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.","url":"https://kushajveersingh.github.io/blog/search/","@type":"WebPage","headline":"Search","@context":"https://schema.org"}</script>
+{"url":"https://kushajveersingh.github.io/blog/search/","@type":"WebPage","headline":"Search","description":"Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kushajveersingh.github.io/blog/feed.xml" title="Kushajveer Singh" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
