--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 search_exclude: true
 ---
 
-Deep Learning Researcher with interest in Computer Vision, Natural Language Processing and Reinforcement Learning.
+Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.
 
 # Posts
