deploy: 4e06981309dc55ffccc670edb35886c702268299

--- a/reproducing-cyclic-learning-papers-and-superconvergence.html
+++ b/reproducing-cyclic-learning-papers-and-superconvergence.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">About</a><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -2617,7 +2617,7 @@ window.onload = wrap_img;
         </p>
       </div>
       <div class="footer-col">
-        <p>Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.</p>
+        <p>Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.</p>
       </div>
     </div>
 
