--- a/complete-tutorial-on-how-to-use-hydra-in-machine-learning-projects.html
+++ b/complete-tutorial-on-how-to-use-hydra-in-machine-learning-projects.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">About</a><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -725,7 +725,7 @@ python main.py lr=1e-2,1e-3 hydra.sweep.dir=multirun/my_run -m
         </p>
       </div>
       <div class="footer-col">
-        <p>Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.</p>
+        <p>Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.</p>
       </div>
     </div>
 
