--- a/docker.html
+++ b/docker.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">About</a><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -1035,7 +1035,7 @@ temp_1
         </p>
       </div>
       <div class="footer-col">
-        <p>Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.</p>
+        <p>Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.</p>
       </div>
     </div>
 
