--- a/study-of-mish-activation-function-in-transfer-learning.html
+++ b/study-of-mish-activation-function-in-transfer-learning.html
@@ -96,7 +96,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">About</a><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -480,7 +480,7 @@ $$y=x*\frac{e^{2x}+2e^x}{e^{2x}+2e^x+2}$$
         </p>
       </div>
       <div class="footer-col">
-        <p>Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.</p>
+        <p>Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.</p>
       </div>
     </div>
 
