--- a/writing-custom-cuda-kernels-with-triton.html
+++ b/writing-custom-cuda-kernels-with-triton.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">About</a><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -384,7 +384,7 @@ tensor(0., device='cuda:0')
         </p>
       </div>
       <div class="footer-col">
-        <p>Deep Learning Researcher with interest in Computer Vision and Graph Machine Learning.</p>
+        <p>Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.</p>
       </div>
     </div>
 
