deploy: b3c1e8aadd819406162d1061fb27afdc00c79769

--- a/projects/index.html
+++ b/projects/index.html
@@ -119,26 +119,31 @@ window.onload = wrap_img;
     <ul>
       <li>Worked in the IT department of the College of Agriculture and Environmental Sciences, University of Georgia (Athens, GA, USA).</li>
       <li>Migrated a legacy <em>Microsoft Access</em> database to <em>PostgreSQL</em> with 18 years of data in it.</li>
-      <li>In order to maintain the existing 217 legacy programs, wrote a parser in <em>Node.js</em> and <em>Express</em> which converts Access queries to PostgreSQL queries on the fly.</li>
-      <li>Created the development and production servers, which included doing IP whitelisting, backup configuration with a local storage server, periodically syncing development and production servers, and implementing the best Linux security practices.</li>
-      <li>To prevent people from accessing the SQL queries from outside, wrote a program in <em>Node.js</em> using which queries can be written in a text file, that is never shared with the public, and refer to them using a special function in <em>JavaScript</em>.</li>
-      <li>Automated the data entry pipeline for handwritten submission forms using <em>Python</em> and <em>JavaScript</em>, resulting in a reduction of time from 2 minutes per form to 25 seconds on average. This was done by adding autocomplete functionality for various fields of the form like name, address, contact info and merging that with the existing database interface.</li>
-      <li>Used <em>Selenium</em> to automate browser-related tasks, like downloading an invoice from UPS and emailing it internally.</li>
-      <li>To send results to the client, a codebase built on top of a proprietary language created by the IT manager was being used which converts information from the database into a PDF. Rewrote that entire codebase using <em>React</em>, <em>TypeScript</em>, <em>Material-UI</em>, <em>Redux</em>. This included converting information from a 200-page manual to a React program and updating the queries from Access to PostgreSQL.</li>
-      <li>Agile development was used. Email and github issues were used to track and communicate daily status and a weekly retrospective meeting was conducted to review the successes of the week and areas of improvement from the previous week.</li>
+      <li>Created a parser in <em>Node.js</em> and <em>Express</em> to convert <em>Access</em> queries to <em>PostgreSQL</em> queries on the fly to maintain the existing 217 programs.</li>
+      <li>Created the development and production servers, which included doing IP whitelisting, backup configuration with a local storage server, and periodically syncing development and production servers.</li>
+      <li>To prevent people from accessing the SQL queries from outside, built a program in <em>Node.js</em> using which queries can be written in a text file, that is never shared with the public, and refer to them using a special function in <em>JavaScript</em>.</li>
+      <li>Automated the data entry pipeline using <em>Python</em> and <em>JavaScript</em>, resulting in a reduction of time from 2 minutes per handwritten form to 25 seconds on average. This was done by implementing autocomplete functionality for various fields, like name, address, contact info and merging it with the existing database interface.</li>
+      <li>Used <em>Selenium</em> to automate browser-related tasks, like downloading an invoice from UPS and downloading reports.</li>
+      <li>Used <em>Next.js</em>/<em>TypeScript</em>/<em>Redux</em>/<em>Material-UI</em> to convert 3 existing programs from <em>JavaScript</em>/<em>jQuery</em></li>
+      <li>Rewrote the entire codebase for a proprietary language, which included converting information from a 200-page manual to a <em>Next.js</em> application and updating the queries from <em>Access</em> to <em>PostgreSQL</em>.</li>
     </ul>
   </li>
   <li><strong>Graduate Teaching Assistant</strong> (Jan 2022 - Aug 2022, UGA)
     <ul>
       <li>Worked in the Computer Science department, University of Georgia (Athens, GA, USA).</li>
-      <li>Led weekly meetings and facilitated group discussions for the course <em>Discrete Mathematics for CS</em>.</li>
-      <li>Held one-on-one office hours for 2 transfer students and went through the entire course content in detail, along with discussing practical applications of the course content.</li>
+      <li>Led weekly meetings and facilitated group discussions for the course <em>Discrete Mathematics for Computer Science</em></li>
+      <li>Held one-on-one office hours for 2 transfer students, covering the entire course in detail and discussing practical applications of the content</li>
     </ul>
   </li>
 </ul>
 
 <h3 id="additional-experience">Additional Experience</h3>
 <ul>
+  <li><strong>Google CS Research Mentorship Program</strong> (Sep 2022 - Dec 2022)
+    <ul>
+      <li>Selected for a 12-week competitive Google CS Research Mentorship Program (CSRMP 2022B)</li>
+    </ul>
+  </li>
   <li><strong>Poster submission, School of Computing Research Day</strong> (Sep 2022 - Oct 2022)
     <ul>
       <li>Submitted 2 posters for the School of Computing, Research Day at University of Georgia (Athens, GA, USA)</li>
