deploy: 8e23083b4d04f4b0e60f30703fd749ee2261bf00

--- a/projects/index.html
+++ b/projects/index.html
@@ -191,21 +191,21 @@ window.onload = wrap_img;
 
 <h3 id="projects">Projects</h3>
 <ul>
-  <li><strong>JSON Graph Visualizer</strong> (Sep 2022, UGA | Athens, GA)
+  <li><strong>JSON Graph Visualizer</strong> (Sep 2022)
     <ul>
       <li>Build <em>Next.js</em>/<em>TypeScript</em>/<em>Redux</em>/<em>Material-UI</em>/<em>styled-components</em> application to convert JSON data into a graph</li>
       <li>Generated multi-level graph allows easier reading of JSON data</li>
       <li>Deployed the application on Github Pages</li>
     </ul>
   </li>
-  <li><strong>Sorting Visualizer</strong> (Aug 2022 - Sep 2022, UGA | Athens, GA)
+  <li><strong>Sorting Visualizer</strong> (Aug 2022 - Sep 2022)
     <ul>
       <li>Built <em>Next.js</em>/<em>TypeScript</em>/<em>Redux</em>/<em>Material-UI</em>/<em>styled-components</em>/<em>Framer Motion</em> application for visualizing over 30 sorting algorithms</li>
       <li>Can add custom delay, change speed of animation, 5 different ways to provide input array, and multiple algorithms can be run in parallel</li>
       <li>Deployed the application on Github Pages</li>
     </ul>
   </li>
-  <li><strong>3D Human Reconstruction</strong> (Aug 2022, UGA | Athens, GA)
+  <li><strong>3D Human Reconstruction</strong> (Aug 2022)
     <ul>
       <li>Engineered a machine learning project to generate a full human body 3D object from random noise</li>
       <li>Combined GAN, Pose Estimation, RGB-to-3D object models from 3 different repositories</li>
@@ -213,7 +213,7 @@ window.onload = wrap_img;
       <li>Built <em>Next.js</em>/<em>TypeScript</em>/<em>ThreeJS</em> application to show the results and deployed it on Github Pages</li>
     </ul>
   </li>
-  <li><strong>Bookstore application</strong> ()</li>
+  <li><strong>Bookstore application</strong> (Jun 2021 - Aug 2021)</li>
 </ul>
 
 <p>Check this <a href="https://github.com/KushajveerSingh/deep_learning">repo</a> for more details.</p>
