deploy: 1223ae538cf0aa17e85860fcacd0558265a3f1c0

--- a/projects/index.html
+++ b/projects/index.html
@@ -145,6 +145,13 @@ window.onload = wrap_img;
       <li>Rewrote the entire codebase for a proprietary language, which included converting information from a 200-page manual to a <em>Next.js</em> application and updating the queries from <em>Access</em> to <em>PostgreSQL</em>.</li>
     </ul>
   </li>
+  <li><strong>Graduate Teaching Assistant</strong> (Jan 2022 - Aug 2022, UGA)
+    <ul>
+      <li>Worked in the Computer Science department, University of Georgia (Athens, GA, USA).</li>
+      <li>Led weekly meetings and facilitated group discussions for the course <em>Discrete Mathematics for Computer Science</em></li>
+      <li>Held one-on-one office hours for 2 transfer students, covering the entire course in detail and discussing practical applications of the content</li>
+    </ul>
+  </li>
 </ul>
 
 <h3 id="additional-experience">Additional Experience</h3>
@@ -152,7 +159,7 @@ window.onload = wrap_img;
   <li><strong>Google CS Research Mentorship Program</strong> (Sep 2022 - Dec 2022)
     <ul>
       <li>Selected for a 12-week competitive Google CS Research Mentorship Program (CSRMP 2022B) among 50 candidates selected from all across USA and Canada.</li>
-      <li>Google-to-student mentorship program that inspires students from Historically Marginalized Groups (HMGs) to pursue and persist in CS research careers.</li>
+      <li>The mentorship program inspires students from Historically Marginalized Groups (HMGs) to pursue and persist a career in CS research.</li>
     </ul>
   </li>
   <li><strong>Poster submission, School of Computing Research Day</strong> (Sep 2022 - Oct 2022)
@@ -161,13 +168,6 @@ window.onload = wrap_img;
       <li>Created a module that improves the robustness of Graph Neural Networks (GNNs) against adversarial attacks</li>
       <li>Proposed module beats state-of-the-art in 3 out of 4 datasets, while only adding 5 lines of code</li>
       <li>Presented a poster on generating full human body 3D scans from random noise</li>
-    </ul>
-  </li>
-  <li><strong>Graduate Teaching Assistant</strong> (Jan 2022 - Aug 2022, UGA)
-    <ul>
-      <li>Worked in the Computer Science department, University of Georgia (Athens, GA, USA).</li>
-      <li>Led weekly meetings and facilitated group discussions for the course <em>Discrete Mathematics for Computer Science</em></li>
-      <li>Held one-on-one office hours for 2 transfer students, covering the entire course in detail and discussing practical applications of the content</li>
     </ul>
   </li>
   <li><strong>Workshop paper reviewer, CVPR 2021</strong> (Apr 2021)
