--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"url":"https://kushajveersingh.github.io/blog/","@type":"WebSite","headline":"Kushajveer Singh","name":"Kushajveer Singh","description":"Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.","@context":"https://schema.org"}</script>
+{"url":"https://kushajveersingh.github.io/blog/","headline":"Kushajveer Singh","@type":"WebSite","name":"Kushajveer Singh","description":"Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kushajveersingh.github.io/blog/feed.xml" title="Kushajveer Singh" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -92,12 +92,24 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a><a class="page-link" href="/blog/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/projects/">Projects</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.</p>
+        <div class="home"><table>
+  <tbody>
+    <tr>
+      <td>Software Engineer</td>
+      <td>Full-Stack Engineer</td>
+      <td>React</td>
+      <td>Next.js</td>
+      <td>PostgreSQL</td>
+      <td>Python</td>
+      <td>Trained by Senior Google Engineers in Software Engineering Best Practices</td>
+    </tr>
+  </tbody>
+</table>
 
 <h1 id="posts">Posts</h1>
 
