--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 search_exclude: true
 ---
 
-Software Engineer | Full-Stack Engineer | React | Next.js | PostgreSQL | Python | Trained by Senior Google Engineers in Software Engineering Best Practices
+Go to kushajveersingh.com
 
 # Posts
