--- a/index.html
+++ b/index.html
@@ -86,19 +86,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><table>
-  <tbody>
-    <tr>
-      <td>Software Engineer</td>
-      <td>Full-Stack Engineer</td>
-      <td>React</td>
-      <td>Next.js</td>
-      <td>PostgreSQL</td>
-      <td>Python</td>
-      <td>Trained by Senior Google Engineers in Software Engineering Best Practices</td>
-    </tr>
-  </tbody>
-</table>
+        <div class="home"><p>Go to kushajveersingh.com</p>
 
 <h1 id="posts">Posts</h1>
 
