--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://kushajveersingh.github.io/blog/404.html" />
 <meta property="og:site_name" content="Kushajveer Singh" />
 <script type="application/ld+json">
-{"url":"https://kushajveersingh.github.io/blog/404.html","headline":"Kushajveer Singh","@type":"WebPage","description":"Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.","@context":"https://schema.org"}</script>
+{"headline":"Kushajveer Singh","url":"https://kushajveersingh.github.io/blog/404.html","@type":"WebPage","description":"Software Engineer working in Full Stack Development, Computer Vision, and Graph Machine Learning.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://kushajveersingh.github.io/blog/feed.xml" title="Kushajveer Singh" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
