--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 search_exclude: true
 ---
 
-Go to kushajveersingh.com
+Go to <a href="kushajveersingh.com">kushajveersingh.com</a>
 
 # Posts
