--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Go to kushajveersingh.com</p>
+        <div class="home"><p>Go to <a href="kushajveersingh.com">kushajveersingh.com</a></p>
 
 <h1 id="posts">Posts</h1>
 
